<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.braingroom.tutor.viewmodel.activity.LoginViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"

        tools:background="@drawable/splash_screen">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:fontFamily="serif"
            android:gravity="center_horizontal"
            android:text="@string/brandName"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />


        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/solid_white_rounded_corner"
            android:ems="14"
            android:hint="@string/emailHint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:text='@={vm.emailId}'
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_color_light"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintDimensionRatio="6.62"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/solid_white_rounded_corner"
            android:ems="14"
            android:hint="@string/passwordHint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="12dp"
            android:text='@={vm.password}'
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_color_light"
            app:layout_constraintBottom_toTopOf="@+id/forget_password"
            app:layout_constraintDimensionRatio="6.62"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/google_login"
            android:onClick="@{vm.onGoogleLoginClicked}"
            android:src="@drawable/ic_google_plus_36dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@id/forget_password"
            app:layout_constraintTop_toBottomOf="@+id/forget_password" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/facebook_login"
            android:onClick="@{vm.onFbLoginClicked}"
            android:src="@drawable/ic_google_plus_36dp"
            app:layout_constraintEnd_toEndOf="@id/forget_password"
            app:layout_constraintTop_toTopOf="@id/imageView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background='@drawable/rounded_corner_line_orange'
            android:drawableTint="@color/material_deeporange600"
            android:gravity="center"
            android:onClick="@{vm.onLoginClicked}"
            android:paddingBottom="9dp"
            android:paddingTop="9dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintDimensionRatio="5.83"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="@{vm.onRegisterCLicked}"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large"
            android:paddingTop="@dimen/padding_medium"
            android:text="@string/register"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            app:layout_constraintTop_toBottomOf="parent" />


    </android.support.constraint.ConstraintLayout>
</layout>
